adicionando aba quiz

--- a/src/pages/beneficios.html
+++ b/src/pages/beneficios.html
@@ -27,6 +27,7 @@
                     <li><a href="../../src/pages/publico-alvo.html">PÚBLICAO-ALVO</a></li>
                     <li><a href="../../src/pages/beneficios.html">BENEFÍCIOS</a></li>
                     <li><a href="../../src/pages/DIA.html">DIA A DIA</a></li>
+                    <li><a href="../../src/pages/quiz.html">QUIZ</a></li>
 
                 </ul>
             </nav>
